--- a/notebooks/plt_extracted.ipynb
+++ b/notebooks/plt_extracted.ipynb
@@ -41,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "a8481f87-c60b-4ff7-94fd-a48c376f2917",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#surface vmrs in ppb\n",
+    "#surface vmrs in ppb 10 year mean\n",
     "hist_O3 = hist.O3.isel(lev=69).mean(dim='time')*1e9\n",
     "ssp126_O3  = ssp126.O3.isel(lev=69).mean(dim='time')*1e9\n",
     "ssp245_O3  = ssp245.O3.isel(lev=69).mean(dim='time')*1e9\n",
